update atom theme

--- a/.atom/styles.less
+++ b/.atom/styles.less
@@ -27,8 +27,8 @@ atom-text-editor,
 .editor {
   font-family: 'Operator Mono';
   background: #111;
-  font-size: 13px;
-  font-weight: 400;
+  font-size: 14px;
+  font-weight: 300 !important;
   line-height: 1.7;
 }
 atom-panel.tool-panel {
